--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -50,13 +50,13 @@
             <tbody>
               <tr th:each="board : ${boards}">
                 <td th:text="${board.id}">Mark</td>
-                <td th:text="${board.title}">Otto</td>
+                <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}"></a></td>
                 <td>홍길동</td>
               </tr>
             </tbody>
           </table>
-          <div class="text-right">
-            <button type="button" class="btn btn-primary">쓰기</button>
+          <div class="text-end">
+            <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
           </div>
     </div>
     
