--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -3,13 +3,14 @@
 
 <head th:replace="fragments/common :: head('게시판')">
     <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="navbar-static.css" th:href="@{/navbar-static.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
 
     <title>게시판</title>
 </head>
@@ -40,7 +41,7 @@
                     제목 에러 메시지
                 </div>
             </div>
-            <div class="text-end">
+            <div class="text-right">
                 <a type="button" class="btn btn-primary" th:href="@{/board/list}">취소</a>
                 <button type="submit" class="btn btn-primary">확인</button>
             </div>
