--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -2,21 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/common :: head('게시판')">
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="navbar-static.css" th:href="@{/navbar-static.css}" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>게시판</title>
+  <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
+  <title>게시판</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:replace="fragments/common :: menu('board')">
-        <!-- <div class="container-fluid">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:replace="fragments/common :: menu('board')">
+    <!-- <div class="container-fluid">
             <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,29 +32,53 @@
                 </ul>
             </div>
         </div> -->
-    </nav>
+  </nav>
 
 
-    <div class="container">
-        <h2>게시판</h2>
-        <div>총 건수 : <span th:text="${#lists.size(boards)}"></span> </div>
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">번호</th>
-                <th scope="col">제목</th>
-                <th scope="col">작성자</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr th:each="board : ${boards}">
-                <td th:text="${board.id}">Mark</td>
-                <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}"></a></td>
-                <td>홍길동</td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="text-end">
+  <div class="container">
+    <h2>게시판</h2>
+    <div>총 건수 : <span th:text="${boards.totalElements}"></span> </div>
+    <form class="form-inline d-flex justify-content-end" method="GET" th:action="@{/board/list}">
+
+      <div class="form-group mx-sm-3 mb-2">
+        <label for="searchText" class="sr-only">검색</label>
+        <input type="text" class="form-control" id="searchText" name="searchText" th:value="${param.searchText}">
+        
+      </div>
+      <button type="submit" class="btn btn-light mb-2">검색</button>
+      
+    </form>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">번호</th>
+          <th scope="col">제목</th>
+          <th scope="col">작성자</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr th:each="board : ${boards}">
+          <td th:text="${board.id}">Mark</td>
+          <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}"></a></td>
+          <td>홍길동</td>
+        </tr>
+      </tbody>
+    </table>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        <li class="page-item" th:classappend="${1 == boards.pageable.pageNumber + 1} ? 'disabled'">
+          <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber - 1}, searchText=${param.searchText})}" tabindex="-1"
+            aria-disabled="true">Previous</a>
+        </li>
+        <li class="page-item" th:classappend="${i == boards.pageable.pageNumber + 1} ? 'disabled'" th:each="i : ${#numbers.sequence(startPage, endPage)}">
+                <a class="page-link" href="#" th:href="@{/board/list(page=${i - 1}, searchText=${param.searchText})}" th:text="${i}">1</a>
+              </li>
+              <li class="page-item" th:classappend="${boards.totalPages == boards.pageable.pageNumber + 1} ? 'disabled'">
+                <a class="page-link" href="#" th:href="@{/board/list(page=${boards.pageable.pageNumber + 1}, searchText=${param.searchText})}">Next</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="text-right">
             <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
           </div>
     </div>
