--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <title>Hello, Spring Boot!</title>
 </head>
 
-<body>
+<body class="text-center">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:replace="fragments/common :: menu('home')">
         <!-- <div class="container-fluid">
             <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
